# parallel_bfs

./: .gitignore  CMakeLists.txt  MyLSan.supp  README.md  data.csv  generate_tests.sh  parse_results.py  plots.py  run_tests.sh  test.yml  test2.yml
config/: complex_tree.yaml  deep_tree.yaml  medium_tree.yaml  simple_tree.yaml  small.yaml  test_tree.yaml  unbalanced_tree.yaml
config/balance/: unbalanced1.yaml  unbalanced2.yaml  unbalanced3.yaml  unbalanced4.yaml  unbalanced5.yaml  unbalanced6.yaml  unbalanced7.yaml
config/branching_factor/: b02.yaml  b03.yaml  b04.yaml  b05.yaml  b06.yaml  b07.yaml  b08.yaml
config/goal_depth/: d02.yaml  d03.yaml  d04.yaml  d05.yaml  d06.yaml  d07.yaml  d08.yaml  d09.yaml  d10.yaml  d11.yaml  d12.yaml  d13.yaml  d14.yaml
config/goal_set_size/: s001.yaml  s003.yaml  s005.yaml  s010.yaml  s050.yaml  s1.yaml  s10.yaml  s100.yaml  s1000.yaml  s10000.yaml  s100000.yaml  s1000000.yaml
include/: generate.h  generator_config.h  solve.h  solver.h  statistics.h  utils.h
lib/: CMakeLists.txt
lib/include/parallel_bfs/: problem_utils.h  problems.h  search.h
lib/include/parallel_bfs/problem_utils/: problem_factory.h  problem_parser.h  problem_reader.h  problem_writer.h  random_builder.h  type_name.h
lib/include/parallel_bfs/problems/: problems_common.h
lib/include/parallel_bfs/problems/basic_graph/: basic_graph.h  basic_graph_generator.h
lib/include/parallel_bfs/problems/basic_tree/: basic_tree.h  basic_tree_generator.h  tree_state.h
lib/include/parallel_bfs/search/: node.h  parallel_bfs.h  problem.h  state.h  sync_bfs.h  transition_model.h  utils.h
lib/include/parallel_bfs/search/search_strategies/: any_of_bfs.h  async_bfs.h  async_start_bfs.h  bfs.h  foreach_bfs.h  foreach_start_bfs.h  multithread_bfs.h  parallel_bfs_async.h  parallel_bfs_tasks.h  sync_bfs.h  tasks_bfs.h
lib/src/problem_utils/: json_writer.cpp
problems/: results_log.txt
scripts/: check_leaks.sh  compile.sh  run.sh
src/: bfs.h  generate.h  main.cpp  node.h  problem.h  problem_generator.h  solve.h  state.h  utils.h
src/bfs/: base_bfs.h  bfs.h  parallel_bfs.h  sync_bfs.h
src/example_problems/: common.h
src/example_problems/basic_graph/: basic_graph.h  basic_graph_generator.h  builder_bg.h  transition_model_bg.h
src/example_problems/basic_tree/: basic_tree.h  basic_tree_generator.h  builder_bt.h  transition_model_bt.h  tree_state.h
src/problem/: child_generator.h  graph_problem.h  problem.h  procedural_problem.h  random_graph.h  transition_model.h
src/problem/child_generators/: graph_reader.h  tree_generator.h
src/problem/transition_models/: basic_graph.h  basic_tree.h
src/problem_factory/: problem_factory.h  procedural_tree_factory.h  random_graph_factory.h  random_problem_factory.h  random_tree_factory.h
src/problem_factory/builders/: basic_graph_builder.h  basic_tree_builder.h  random_builder.h
src/problem_factory/factories/: procedural_tree_factory.h  random_graph_factory.h  random_tree_factory.h
src/problem_factory/readers/: problem_reader.h
src/problem_factory/state_generators/: tree_state_generator.h
src/problem_parser/: problem_parser.h
src/problem_parser/parsers/: json_parser.h
src/problem_writer/: problem_writer.h
src/problem_writer/writers/: json_writer.h
src/state/: graph_state.h  state.h  tree_state.h
